--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages && git push origin master"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-calendar": "^4.7.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.4",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
